--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"dependencies": {
 		"@citizenfx/client": "^2.0.3930-1",
 		"@citizenfx/server": "^2.0.3930-1",
+		"@types/mongodb": "^3.6.12",
 		"@types/node": "^15.0.2",
 		"mongodb": "^3.6.6"
 	}
